[gd_scene load_steps=5 format=2]

[ext_resource path="res://player/Player.gd" type="Script" id=1]
[ext_resource path="res://objects/bat.tscn" type="PackedScene" id=2]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.588582, 0.549981, 0.398094 )

[sub_resource type="CapsuleShape" id=1]
radius = 0.309659
height = 0.523307

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.834306, 0 )

[node name="Camera" type="Camera" parent="Head"]
current = true
fov = 90.0

[node name="bat" parent="Head/Camera" instance=ExtResource( 2 )]
transform = Transform( 0.32223, 0, 0, 0, 0.32223, 0, 0, 0, 0.32223, -6.74427e-05, -0.0371255, -0.0306773 )

[node name="BatHitbox" type="Area" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.188833, -0.820135 )

[node name="CollisionShape" type="CollisionShape" parent="Head/BatHitbox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.180691, -0.161189 )
shape = SubResource( 2 )

[node name="PlayerCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.569296, 0 )
shape = SubResource( 1 )

[node name="FootstepTimer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="FootstepPlayer" type="AudioStreamPlayer3D" parent="."]
unit_db = -2.0
bus = "SFX"

[connection signal="hitbox_off" from="Head/Camera/bat" to="." method="_on_bat_hitbox_off"]
[connection signal="hitbox_on" from="Head/Camera/bat" to="." method="_on_bat_hitbox_on"]
[connection signal="body_entered" from="Head/BatHitbox" to="." method="_on_BatHitbox_body_entered"]
[connection signal="timeout" from="FootstepTimer" to="." method="_on_FootstepTimer_timeout"]
